<resources>
    <string name="app_name">Express Delivery</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="app_description">Hassle Free Courier Service</string>
    <string name="logo">Logo</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="local_stored_shipments">Local Stored Shipments</string>
    <string name="shipments">Shipments</string>
    <string name="centers">Service Centers</string>
    <string name="drivers">Drivers</string>
    <string name="agents">Agents</string>
    <string name="logout">Logout</string>
    <string name="disputes">Disputes</string>
    <string name="vehicles">Vehicles</string>
    <string name="add_agent">Add Agent</string>
    <string name="add_driver">Add Driver</string>
    <string name="open_nav_drawer">OPEN_NAV_BAR</string>
    <string name="close_nav_drawer">CLOSE_NAV_BAR</string>
    <string name="track_package">Track Package</string>
    <string name="send_package">Send Package</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="greetings">Greeting</string>

    <string-array name="receiver_city">
        <item>Colombo [Western Province]</item>
        <item>Negombo [Western Province]</item>
        <item>Galle [Southern Province]</item>
    </string-array>

    <string-array name="locations">
        <item>Colombo</item>
        <item>Negombo</item>
        <item>Galle</item>
    </string-array>

    <string-array name="status">
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>

    <string-array name="dispute_types">
        <item>Broken goods</item>
        <item>Not received</item>
    </string-array>

    <string-array name="type_of_parcel">
        <item>Small 20CM X 20CM</item>
        <item>Medium 45CM X 45CM</item>
        <item>Large 80CM X 80CM</item>
        <item>Card Envelop</item>
        <item>Express Delivery Flyer</item>
    </string-array>

    <string-array name="payment_method">
        <item>Card</item>
        <item>Cash on Delivery</item>
    </string-array>

    <string-array name="driver_list">
        <item>Trevor Kurera</item>
        <item>Janith Fonseka</item>
        <item>Kumara Pieris</item>
        <item>Kevin Perera</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>